fix(rdl): update memory map

--- a/rdl/src/gpt.tim_cr1.rdl
+++ b/rdl/src/gpt.tim_cr1.rdl
@@ -9,9 +9,16 @@ reg TIM_CR1{
             1: Счетчик активен";
     hw = rw;
     sw = rw;
-  } CEN[1:1];
+  } CEN[0:0];
   field {
     name = "Запрет обновления";
+    desc = "0: UEV разрешено<br><br>
+            1: UEV запрещено";
+    hw = rw;
+    sw = rw;
+  } UDIS[1:1];
+  field {
+    name = "Выбор источника события обновления";
     desc = "0: Событие обновления (UEV) может быть сгенерировано любым из способов: <br>
             [list] [*] Overflow/Underflow 
                    [*] Установка бита UG 
